feat: adjust order filtering
and openapi.yaml to reuse customerId schema
